# fiend

./: .gitignore  .gitmodules  BUILD.md  BUILD_FIXES.md  CMakeLists.txt  MEMORY_FIXES.md  Makefile  README.md  test-windows-build.sh  test_crash.sh
.github/workflows/: README.md  build.yml
Build on Linux (Bundled Allegro)/: 10_Test bundled build.txt  11_Upload artifacts.txt  1_Set up job.txt  22_Post Checkout code with submodules.txt  23_Complete job.txt  2_Checkout code with submodules.txt  3_Install build dependencies only.txt  4_Verify submodule.txt  5_Build bundled Allegro 4.4.3.1.txt  6_Configure Fiend with bundled Allegro.txt  7_Build Fiend.txt  8_Check binaries and dependencies.txt  9_Bundle Allegro library with executables.txt  system.txt
Fiend-original/save/: save1.sav  save2.sav  save3.sav  save4.sav  save5.sav  tempfile.txt
build-mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
build-mingw/src/fiend/: Makefile  cmake_install.cmake
build-mingw/src/mapeditor/: Makefile  cmake_install.cmake
cmake_modules/: FindAllegro.cmake
docs/: BUILD.md  BUNDLED_BUILDS.md  DEPENDENCIES.txt  GITHUB_ACTIONS_GUIDE.md  LOGGING.md  PORTING_GUIDE.md  PRESERVATION_STATUS.md
release/: readme.txt
release/data/resource_lists/: characters.txt  enemies.txt  faces.txt  objects.txt  particles.txt  tiles.txt
release/graphic/characters/: farmer_f1.txt  farmer_f2.txt  farmer_m1.txt  farmer_m2.txt  george.txt  nick.txt
release/maps/cellar/: catacomb1.map  cellar3.map
release/maps/firstfloor/: hall1.map
release/maps/lauder_alive/: mine2.map
release/maps/lauder_dead/: forest1.map  hearch1.map  lauder.map  moray1.map  professor1.map  supply2.map
release/maps/secondfloor/: hall2.map
src/: audio.c  audio.h  bmp_array.c  character.c  enemy.c  fiend.c  fiend.h  grafik4.c  item.c  lightmap.c  logger.c  logger.h  map.h  mapio.c  misc.c  object.c  object.h  path_utils.c  path_utils.h  rotate_sprite.c  sound.c  sound.h  tile.c  trigger.c  trigger.h
src/fiend/: CMakeLists.txt  ai.c  collision.c  console_funcs.c  draw_level.c  effect.h  enemy_update.c  enemy_update.h  intro.c  inventory.c  link.c  los.c  main.c  menu.c  missile.c  notes.c  npc_update.c  npc_update.h  particle.c  player.c  savegame.c  soundplay.c  trigger_cond.c  trigger_event.c  trigger_update.c  update.c  weapon.c
src/mapeditor/: CMakeLists.txt  batch_util.c  batch_util.h  d_misc.c  d_object.c  mapedit.c  menu_misc.c
tests/: README.md  analyze_forest1.c  analyze_trigger.c  calculate_trigger_offset.c  check_104736.c  check_all_32bit_sizes.c  check_before_nothing.c  check_gap.c  check_trigger_layout.c  dump_triggers.c  find_link_size.c  find_set_var_corben.c  find_trigger_start.c  parse_real_trigger.c  test_cond_size.c  test_link_size.c  test_struct_size.c  test_substructures.c  test_trigger_size.c  test_trigger_unpacked.c
tools/: generate_resource_lists.py
